--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "apollo-boost": "^0.4.9",
+    "apollo-link-rest": "^0.8.0-beta.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
     "react": "^17.0.2",
