--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-link-rest": "^0.8.0-beta.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
+    "graphql-anywhere": "^4.2.7",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
