--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "apollo-boost": "^0.4.9",
     "apollo-link-rest": "^0.8.0-beta.0",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
     "graphql-anywhere": "^4.2.7",
